# radar

./: README.md  pyproject.toml
config/: watch_points.json
data/: telegram_alert_state.json
data/geo/: pol_adm2.geojson
data/imgw/polrad/: 2026060818250000dBR.sri.h5  2026060818300000dBR.sri.h5  2026060818350000dBR.sri.h5  2026060818400000dBR.sri.h5  2026060818450000dBR.sri.h5  2026060818500000dBR.sri.h5  2026060818550000dBR.sri.h5  2026060819000000dBR.sri.h5  2026060819050000dBR.sri.h5  2026060819100000dBR.sri.h5  2026060819150000dBR.sri.h5  2026060819200000dBR.sri.h5  2026061413050000dBR.sri.h5  2026061413100000dBR.sri.h5  2026061413150000dBR.sri.h5  2026061413200000dBR.sri.h5  2026061413250000dBR.sri.h5  2026061413300000dBR.sri.h5  2026061413350000dBR.sri.h5  2026061413400000dBR.sri.h5  2026061413450000dBR.sri.h5  2026061413500000dBR.sri.h5  2026061413550000dBR.sri.h5  2026061414000000dBR.sri.h5  2026061505050000dBR.sri.h5  2026061505100000dBR.sri.h5  2026061505150000dBR.sri.h5  2026061505200000dBR.sri.h5  2026061505250000dBR.sri.h5  2026061505300000dBR.sri.h5  2026061505350000dBR.sri.h5  (+5 more)
src/imgw/: __init__.py  catalog.py  client.py
src/notebooks/: plot_steps_nowcast.ipynb
src/nwp/: __init__.py  core.py  helpers.py
src/pipeline/: pipeline.py
src/pysteps/: steps_nowcast_imgw.py  steps_nowcast_imgw_icon.py
src/radar/: __init__.py  decoder.py  palette.py  renderer.py
src/telegram/: telegram.py
src/transfer/: ftp.py
www/: index.php  point_data.php
www/css/: style.css
www/js/: api.js  app.js  charts.js  config.js  map.js  player.js
