[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steps-imgw"
version = "0.1.0"
description = "Stochastyczna prognoza opadów STEPS z danych radarowych IMGW"
requires-python = ">=3.10,<3.14"
dependencies = [
    # Istniejące moduły projektu (radar + imgw)
    "h5py>=3.9",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "pyproj>=3.6",
    "pandas>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    # Prognoza STEPS
    "pysteps>=1.8",
    "scipy>=1.11",
    "opencv-python>=4.8",
    # Mapy i granice województw
    "geopandas>=0.14",
    "shapely>=2.0",
    "cartopy>=0.22",
    # Dane NWP (GRIB2 z DWD)
    "eccodes>=1.6",
    "xarray>=2023.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
# Instaluje tylko imgw i radar — src/pysteps/ to skrypty, nie pakiet
packages = ["src/imgw", "src/radar"]
